--- a/page8.html
+++ b/page8.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Page8 - Romantic Mini Games</title>
+  <title>Page8 - Mini Games</title>
   <style>
     body {
       margin: 0;
