--- a/page8.html
+++ b/page8.html
@@ -1,1 +1,241 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Page 8 - Games</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
+      overflow: hidden;
+      text-align: center;
+    }
 
+    h1 {
+      font-size: 30px;
+      margin: 20px;
+      font-weight: bold;
+    }
+
+    /* Tabs */
+    .tabs {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .tab {
+      padding: 10px 20px;
+      margin: 0 5px;
+      background: #fff;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+    .tab.active {
+      background: #ff69b4;
+      color: #fff;
+    }
+
+    .game {
+      display: none;
+    }
+    .game.active {
+      display: block;
+    }
+
+    /* Floating emojis */
+    .emoji {
+      position: absolute;
+      font-size: 30px;
+      animation: float 8s infinite;
+    }
+    @keyframes float {
+      0% { transform: translateY(100vh) scale(1); opacity: 1; }
+      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
+    }
+
+    /* Game 1 */
+    #kissCounter {
+      font-size: 20px;
+      margin: 15px;
+      font-weight: bold;
+    }
+    #blowBtn {
+      padding: 10px 20px;
+      font-size: 18px;
+      background: #ff69b4;
+      color: #fff;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+    }
+
+    /* Game 2 */
+    #gameArea {
+      width: 100%;
+      height: 400px;
+      border: 2px dashed #fff;
+      position: relative;
+      overflow: hidden;
+      background: rgba(255,255,255,0.2);
+    }
+    #basket {
+      width: 80px;
+      height: 40px;
+      background: pink;
+      border-radius: 10px;
+      position: absolute;
+      bottom: 10px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    .fallingKiss {
+      position: absolute;
+      font-size: 30px;
+      animation: fall 4s linear forwards;
+    }
+    @keyframes fall {
+      from { top: -30px; }
+      to { top: 400px; }
+    }
+    #score {
+      font-size: 20px;
+      margin-top: 10px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <h1>Games Time for My Bestest Friend 💙🫂</h1>
+
+  <!-- Tabs -->
+  <div class="tabs">
+    <div class="tab active" onclick="switchTab(1)">Game 1 😘</div>
+    <div class="tab" onclick="switchTab(2)">Game 2 😚</div>
+  </div>
+
+  <!-- Game 1 -->
+  <div id="game1" class="game active">
+    <h2>Blow 25 Kisses 😘</h2>
+    <p id="kissCounter">Blown: 0 / 25</p>
+    <button id="blowBtn" onclick="blowKiss()">Blow a Kiss 😘</button>
+  </div>
+
+  <!-- Game 2 -->
+  <div id="game2" class="game">
+    <h2>Catch 15 Kisses 😚</h2>
+    <div id="gameArea">
+      <div id="basket"></div>
+    </div>
+    <p id="score">Caught: 0 / 15</p>
+  </div>
+
+  <!-- Confetti + Fireworks scripts -->
+  <canvas id="confettiCanvas"></canvas>
+
+  <script>
+    // Switch Tabs
+    function switchTab(n) {
+      document.querySelectorAll('.tab').forEach((t,i)=> {
+        t.classList.toggle('active', i===n-1);
+      });
+      document.querySelectorAll('.game').forEach((g,i)=> {
+        g.classList.toggle('active', i===n-1);
+      });
+    }
+
+    // Floating Emojis
+    const emojis = ["💙","🫂","😘","😚","💎","💖"];
+    function createEmoji() {
+      const e = document.createElement("div");
+      e.className = "emoji";
+      e.innerText = emojis[Math.floor(Math.random()*emojis.length)];
+      e.style.left = Math.random()*100 + "vw";
+      e.style.top = "100vh";
+      e.style.animationDuration = 5 + Math.random()*5 + "s";
+      document.body.appendChild(e);
+      setTimeout(()=>e.remove(), 8000);
+    }
+    setInterval(createEmoji, 800);
+
+    // Game 1 Logic
+    let kisses = 0;
+    function blowKiss() {
+      kisses++;
+      document.getElementById("kissCounter").innerText = `Blown: ${kisses} / 25`;
+      let k = document.createElement("div");
+      k.innerText = "😘";
+      k.style.position = "absolute";
+      k.style.left = Math.random()*90 + "vw";
+      k.style.top = "90vh";
+      k.style.fontSize = "25px";
+      k.style.animation = "float 4s linear forwards";
+      document.body.appendChild(k);
+      setTimeout(()=>k.remove(),4000);
+      if (kisses === 25) {
+        launchConfetti();
+        setTimeout(()=>alert("Yay! 100 kisses raining! 😘"),500);
+        for (let i=0;i<100;i++) {
+          setTimeout(()=>blowKiss(),i*50);
+        }
+      }
+    }
+
+    // Game 2 Logic
+    let score = 0;
+    const basket = document.getElementById("basket");
+    let basketX = 50;
+    document.addEventListener("keydown", (e)=>{
+      if (e.key==="ArrowLeft") { basketX -= 5; }
+      if (e.key==="ArrowRight") { basketX += 5; }
+      basket.style.left = basketX + "%";
+    });
+
+    function dropKiss() {
+      const kiss = document.createElement("div");
+      kiss.className = "fallingKiss";
+      kiss.innerText = "😘";
+      kiss.style.left = Math.random()*90 + "%";
+      document.getElementById("gameArea").appendChild(kiss);
+
+      let fallInterval = setInterval(()=>{
+        const kissRect = kiss.getBoundingClientRect();
+        const basketRect = basket.getBoundingClientRect();
+        if (kissRect.bottom >= basketRect.top &&
+            kissRect.left >= basketRect.left &&
+            kissRect.right <= basketRect.right) {
+          score++;
+          document.getElementById("score").innerText = `Caught: ${score} / 15`;
+          kiss.remove();
+          clearInterval(fallInterval);
+          if (score >= 15) {
+            launchConfetti();
+            setTimeout(()=>window.location.href="Page9.html", 2000);
+          }
+        }
+      },100);
+      setTimeout(()=>kiss.remove(),4000);
+    }
+    setInterval(dropKiss,2000);
+
+    // Confetti
+    function launchConfetti(){
+      const duration = 2000;
+      const end = Date.now() + duration;
+      (function frame(){
+        confetti({
+          particleCount: 5,
+          startVelocity: 30,
+          spread: 360,
+          origin: {x: Math.random(), y: Math.random()-0.2}
+        });
+        if(Date.now()<end) requestAnimationFrame(frame);
+      })();
+    }
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+</body>
+</html>
