--- a/page8.html
+++ b/page8.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Page 8 - Games</title>
+  <title>page 8 - Games</title>
   <style>
     body {
       margin: 0;
