--- a/page8.html
+++ b/page8.html
@@ -2,240 +2,198 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>page 8 - Games</title>
+  <title>Page 8 - Games</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
       font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #ffdde1, #ee9ca7);
-      overflow: hidden;
       text-align: center;
+      background: linear-gradient(135deg, #f9d2fc, #c2e9fb);
+      overflow: hidden;
     }
-
     h1 {
-      font-size: 30px;
-      margin: 20px;
+      font-size: 28px;
       font-weight: bold;
+      margin: 20px 0;
+      color: #222;
     }
 
     /* Tabs */
-    .tabs {
+    .tab {
       display: flex;
       justify-content: center;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
     }
-    .tab {
-      padding: 10px 20px;
-      margin: 0 5px;
-      background: #fff;
-      border-radius: 20px;
-      cursor: pointer;
-      font-weight: bold;
-      transition: 0.3s;
-    }
-    .tab.active {
-      background: #ff69b4;
-      color: #fff;
-    }
-
-    .game {
-      display: none;
-    }
-    .game.active {
-      display: block;
-    }
-
-    /* Floating emojis */
-    .emoji {
-      position: absolute;
-      font-size: 30px;
-      animation: float 8s infinite;
-    }
-    @keyframes float {
-      0% { transform: translateY(100vh) scale(1); opacity: 1; }
-      100% { transform: translateY(-10vh) scale(1.5); opacity: 0; }
-    }
-
-    /* Game 1 */
-    #kissCounter {
-      font-size: 20px;
-      margin: 15px;
-      font-weight: bold;
-    }
-    #blowBtn {
-      padding: 10px 20px;
-      font-size: 18px;
-      background: #ff69b4;
-      color: #fff;
+    .tab button {
+      background: #ff85b3;
       border: none;
-      border-radius: 10px;
+      padding: 12px 20px;
       cursor: pointer;
+      font-size: 16px;
+      font-weight: bold;
+      margin: 0 5px;
+      border-radius: 8px;
+      transition: background 0.3s;
+    }
+    .tab button:hover {
+      background: #ff4d94;
+    }
+    .tab button.active {
+      background: #ff0066;
+      color: #fff;
     }
 
-    /* Game 2 */
-    #gameArea {
-      width: 100%;
-      height: 400px;
-      border: 2px dashed #fff;
+    .tabcontent {
+      display: none;
+      padding: 20px;
+      animation: fadeEffect 0.6s;
+    }
+    @keyframes fadeEffect {
+      from {opacity: 0;}
+      to {opacity: 1;}
+    }
+
+    /* Falling kiss for Game 1 */
+    .kiss {
+      position: absolute;
+      top: -40px;
+      font-size: 30px;
+      animation: fall linear forwards;
+    }
+    @keyframes fall {
+      to { transform: translateY(110vh); }
+    }
+
+    /* Game 2 area */
+    #game2Area {
       position: relative;
+      width: 100%;
+      height: 70vh;
+      background: #fff;
+      border: 2px solid #333;
       overflow: hidden;
-      background: rgba(255,255,255,0.2);
+      margin-top: 15px;
     }
     #basket {
-      width: 80px;
-      height: 40px;
-      background: pink;
-      border-radius: 10px;
       position: absolute;
       bottom: 10px;
       left: 50%;
       transform: translateX(-50%);
+      font-size: 40px;
     }
     .fallingKiss {
       position: absolute;
-      font-size: 30px;
-      animation: fall 4s linear forwards;
-    }
-    @keyframes fall {
-      from { top: -30px; }
-      to { top: 400px; }
-    }
-    #score {
-      font-size: 20px;
-      margin-top: 10px;
-      font-weight: bold;
+      top: -30px;
+      font-size: 28px;
     }
   </style>
 </head>
 <body>
+
   <h1>Games Time for My Bestest Friend 💙🫂</h1>
 
   <!-- Tabs -->
-  <div class="tabs">
-    <div class="tab active" onclick="switchTab(1)">Game 1 😘</div>
-    <div class="tab" onclick="switchTab(2)">Game 2 😚</div>
+  <div class="tab">
+    <button class="tablinks active" onclick="openGame(event, 'game1')">Game 1 - Blow Kisses 😘</button>
+    <button class="tablinks" onclick="openGame(event, 'game2')">Game 2 - Catch Kisses 💋</button>
   </div>
 
   <!-- Game 1 -->
-  <div id="game1" class="game active">
+  <div id="game1" class="tabcontent" style="display:block;">
     <h2>Blow 25 Kisses 😘</h2>
-    <p id="kissCounter">Blown: 0 / 25</p>
-    <button id="blowBtn" onclick="blowKiss()">Blow a Kiss 😘</button>
+    <button onclick="blowKisses()">Blow Kisses</button>
   </div>
 
   <!-- Game 2 -->
-  <div id="game2" class="game">
-    <h2>Catch 15 Kisses 😚</h2>
-    <div id="gameArea">
-      <div id="basket"></div>
+  <div id="game2" class="tabcontent">
+    <h2>Catch 15 Kisses 💋</h2>
+    <div id="game2Area">
+      <div id="basket">🧺</div>
     </div>
-    <p id="score">Caught: 0 / 15</p>
+    <p id="score">Score: 0</p>
   </div>
 
-  <!-- Confetti + Fireworks scripts -->
-  <canvas id="confettiCanvas"></canvas>
-
   <script>
-    // Switch Tabs
-    function switchTab(n) {
-      document.querySelectorAll('.tab').forEach((t,i)=> {
-        t.classList.toggle('active', i===n-1);
-      });
-      document.querySelectorAll('.game').forEach((g,i)=> {
-        g.classList.toggle('active', i===n-1);
-      });
+    // Tab switch
+    function openGame(evt, gameName) {
+      let i, tabcontent, tablinks;
+      tabcontent = document.getElementsByClassName("tabcontent");
+      for (i = 0; i < tabcontent.length; i++) {
+        tabcontent[i].style.display = "none";
+      }
+      tablinks = document.getElementsByClassName("tablinks");
+      for (i = 0; i < tablinks.length; i++) {
+        tablinks[i].classList.remove("active");
+      }
+      document.getElementById(gameName).style.display = "block";
+      evt.currentTarget.classList.add("active");
     }
 
-    // Floating Emojis
-    const emojis = ["💙","🫂","😘","😚","💎","💖"];
-    function createEmoji() {
-      const e = document.createElement("div");
-      e.className = "emoji";
-      e.innerText = emojis[Math.floor(Math.random()*emojis.length)];
-      e.style.left = Math.random()*100 + "vw";
-      e.style.top = "100vh";
-      e.style.animationDuration = 5 + Math.random()*5 + "s";
-      document.body.appendChild(e);
-      setTimeout(()=>e.remove(), 8000);
-    }
-    setInterval(createEmoji, 800);
-
-    // Game 1 Logic
-    let kisses = 0;
-    function blowKiss() {
-      kisses++;
-      document.getElementById("kissCounter").innerText = `Blown: ${kisses} / 25`;
-      let k = document.createElement("div");
-      k.innerText = "😘";
-      k.style.position = "absolute";
-      k.style.left = Math.random()*90 + "vw";
-      k.style.top = "90vh";
-      k.style.fontSize = "25px";
-      k.style.animation = "float 4s linear forwards";
-      document.body.appendChild(k);
-      setTimeout(()=>k.remove(),4000);
-      if (kisses === 25) {
-        launchConfetti();
-        setTimeout(()=>alert("Yay! 100 kisses raining! 😘"),500);
-        for (let i=0;i<100;i++) {
-          setTimeout(()=>blowKiss(),i*50);
-        }
+    // Game 1 - Blow kisses
+    function blowKisses() {
+      for (let i = 0; i < 100; i++) {
+        let kiss = document.createElement("div");
+        kiss.className = "kiss";
+        kiss.innerHTML = "😘";
+        kiss.style.left = Math.random() * window.innerWidth + "px";
+        kiss.style.animationDuration = (2 + Math.random() * 3) + "s";
+        document.body.appendChild(kiss);
+        setTimeout(() => kiss.remove(), 5000);
       }
     }
 
-    // Game 2 Logic
-    let score = 0;
+    // Game 2 - Catch kisses
     const basket = document.getElementById("basket");
-    let basketX = 50;
-    document.addEventListener("keydown", (e)=>{
-      if (e.key==="ArrowLeft") { basketX -= 5; }
-      if (e.key==="ArrowRight") { basketX += 5; }
-      basket.style.left = basketX + "%";
+    const gameArea = document.getElementById("game2Area");
+    let score = 0;
+
+    document.addEventListener("mousemove", e => {
+      let areaRect = gameArea.getBoundingClientRect();
+      if (e.clientX >= areaRect.left && e.clientX <= areaRect.right) {
+        basket.style.left = (e.clientX - areaRect.left - basket.offsetWidth / 2) + "px";
+      }
     });
 
     function dropKiss() {
-      const kiss = document.createElement("div");
+      let kiss = document.createElement("div");
       kiss.className = "fallingKiss";
-      kiss.innerText = "😘";
-      kiss.style.left = Math.random()*90 + "%";
-      document.getElementById("gameArea").appendChild(kiss);
+      kiss.innerHTML = "😘";
+      kiss.style.left = Math.random() * (gameArea.clientWidth - 30) + "px";
+      gameArea.appendChild(kiss);
 
-      let fallInterval = setInterval(()=>{
-        const kissRect = kiss.getBoundingClientRect();
-        const basketRect = basket.getBoundingClientRect();
-        if (kissRect.bottom >= basketRect.top &&
-            kissRect.left >= basketRect.left &&
-            kissRect.right <= basketRect.right) {
+      let fallInterval = setInterval(() => {
+        let kissTop = kiss.offsetTop;
+        kiss.style.top = kissTop + 5 + "px";
+
+        // Collision
+        let basketRect = basket.getBoundingClientRect();
+        let kissRect = kiss.getBoundingClientRect();
+        if (!(kissRect.bottom < basketRect.top || 
+              kissRect.top > basketRect.bottom || 
+              kissRect.right < basketRect.left || 
+              kissRect.left > basketRect.right)) {
           score++;
-          document.getElementById("score").innerText = `Caught: ${score} / 15`;
+          document.getElementById("score").innerText = "Score: " + score;
           kiss.remove();
           clearInterval(fallInterval);
           if (score >= 15) {
-            launchConfetti();
-            setTimeout(()=>window.location.href="Page9.html", 2000);
+            window.location.href = "/My-Panda/page9.html"; // Go to Page 9
           }
         }
-      },100);
-      setTimeout(()=>kiss.remove(),4000);
-    }
-    setInterval(dropKiss,2000);
 
-    // Confetti
-    function launchConfetti(){
-      const duration = 2000;
-      const end = Date.now() + duration;
-      (function frame(){
-        confetti({
-          particleCount: 5,
-          startVelocity: 30,
-          spread: 360,
-          origin: {x: Math.random(), y: Math.random()-0.2}
-        });
-        if(Date.now()<end) requestAnimationFrame(frame);
-      })();
+        if (kissTop > gameArea.clientHeight - 30) {
+          kiss.remove();
+          clearInterval(fallInterval);
+        }
+      }, 50);
     }
+
+    setInterval(() => {
+      if (document.getElementById("game2").style.display === "block") {
+        dropKiss();
+      }
+    }, 1200);
   </script>
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+
 </body>
 </html>
