--- a/page8.html
+++ b/page8.html
@@ -1,166 +1,134 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blow the Kiss 😘</title>
+  <title>Page8</title>
   <style>
     body {
       margin: 0;
       padding: 0;
+      overflow: hidden;
+      text-align: center;
       background: black;
       font-family: Arial, sans-serif;
-      text-align: center;
-      overflow: hidden;
-      color: white;
     }
-    h1 {
-      margin-top: 20px;
-      font-size: 2.2em;
+
+    .bg {
+      width: 1080px;
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+      position: relative;
+      z-index: 1;
+    }
+
+    .top-text {
+      position: absolute;
+      top: 20px;
+      width: 100%;
+      font-size: 32px;
       font-weight: bold;
       color: white;
-      text-shadow: 2px 2px 6px #000;
+      text-shadow: 2px 2px 8px #000;
+      z-index: 2;
     }
-    img {
-      display: block;
-      margin: 20px auto;
-      max-width: 100%;
-      height: 1080px;
-      object-fit: cover;
-      border-radius: 12px;
+
+    .quiz-box {
+      position: absolute;
+      bottom: 60px;
+      width: 100%;
+      z-index: 3;
     }
+
     button {
-      margin-top: 20px;
-      padding: 12px 24px;
-      font-size: 1.2em;
-      background: #ff4da6;
-      color: white;
+      font-size: 22px;
+      padding: 10px 20px;
       border: none;
       border-radius: 8px;
+      background: deeppink;
+      color: white;
+      font-weight: bold;
       cursor: pointer;
     }
     button:hover {
-      background: #ff1a8c;
+      background: hotpink;
     }
+
     .kiss {
       position: absolute;
-      font-size: 2em;
+      font-size: 40px;
       animation: fall linear;
+      z-index: 5;
     }
+
     @keyframes fall {
-      0% { transform: translateY(-10vh) scale(1); opacity: 1; }
-      100% { transform: translateY(110vh) scale(1.5); opacity: 0; }
+      from { transform: translateY(-50px); opacity: 1; }
+      to { transform: translateY(110vh); opacity: 0; }
     }
-    .firework {
+
+    .float {
       position: absolute;
-      width: 5px;
-      height: 5px;
-      border-radius: 50%;
-      background: yellow;
-      animation: explode 1s ease-out forwards;
+      font-size: 26px;
+      font-weight: bold;
+      animation: floatUp 8s linear infinite;
+      z-index: 4;
+      pointer-events: none;
     }
-    @keyframes explode {
-      from { transform: scale(1); opacity: 1; }
-      to { transform: scale(5); opacity: 0; }
+
+    @keyframes floatUp {
+      from { transform: translateY(100vh) rotate(0deg); opacity: 1; }
+      to { transform: translateY(-120vh) rotate(360deg); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <h1>Blow 25 Kisses 😘 for Me!</h1>
+  <!-- Background song -->
+  <audio autoplay loop>
+    <source src="Page8.mp3" type="audio/mpeg">
+  </audio>
 
-  <!-- Background photo -->
-  <img src="Page8.jpg" alt="Birthday Surprise">
+  <!-- Background image -->
+  <img src="Page8.jpg" alt="Page8" class="bg">
 
-  <!-- Song autoplay -->
-  <audio id="bg-music" src="Page8.mp3" autoplay loop playsinline></audio>
+  <!-- Top text -->
+  <div class="top-text">Games Time for My Bestest Friend 💙🫂</div>
 
-  <!-- Game Button -->
-  <button onclick="blowKisses()">Blow Kisses 😘</button>
+  <!-- Blow Kiss Game -->
+  <div class="quiz-box">
+    <button onclick="blowKisses()">💋 Blow 25 Kisses 😘</button>
+  </div>
 
-  <!-- Confetti -->
-  <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.5.1/dist/confetti.browser.min.js"></script>
   <script>
-    const bgMusic = document.getElementById("bg-music");
-
-    // Try to autoplay immediately
-    bgMusic.play().catch(() => {
-      // If blocked, wait for first tap/click
-      document.body.addEventListener("click", unlockMusic, { once: true });
-      document.body.addEventListener("touchstart", unlockMusic, { once: true });
-    });
-
-    function unlockMusic() {
-      bgMusic.play();
+    // Floating emojis
+    const floatItems = ["🤗","😚","💗","🙈","💙","🫂"];
+    for (let i = 0; i < 40; i++) {
+      let span = document.createElement("span");
+      span.className = "float";
+      span.innerText = floatItems[Math.floor(Math.random()*floatItems.length)];
+      span.style.left = Math.random()*90 + "vw";
+      span.style.animationDuration = (5 + Math.random()*5) + "s";
+      document.body.appendChild(span);
     }
 
     function blowKisses() {
-      let kissCount = 0;
-
-      // Start confetti + fireworks immediately
-      launchConfetti();
-      launchFireworks();
-
       for (let i = 0; i < 25; i++) {
         setTimeout(() => {
-          createKiss();
-          kissCount++;
-
-          if (kissCount === 25) {
-            setTimeout(() => {
-              window.location.href = "page9.html"; // Auto move
-            }, 2000);
-          }
-        }, i * 200);
+          let kiss = document.createElement("div");
+          kiss.className = "kiss";
+          kiss.innerText = "😘";
+          kiss.style.left = Math.random()*90 + "vw";
+          kiss.style.top = "-50px";
+          kiss.style.animationDuration = (3 + Math.random()*2) + "s";
+          document.body.appendChild(kiss);
+          setTimeout(() => kiss.remove(), 5000);
+        }, i*200);
       }
-    }
 
-    function createKiss() {
-      const kiss = document.createElement("div");
-      kiss.classList.add("kiss");
-      kiss.textContent = "😘";
-      kiss.style.left = Math.random() * 90 + "vw";
-      kiss.style.animationDuration = (Math.random() * 2 + 3) + "s";
-      document.body.appendChild(kiss);
-
-      setTimeout(() => kiss.remove(), 5000);
-    }
-
-    function launchConfetti() {
-      var duration = 3 * 1000;
-      var end = Date.now() + duration;
-
-      (function frame() {
-        confetti({
-          particleCount: 5,
-          angle: 60,
-          spread: 55,
-          origin: { x: 0 }
-        });
-        confetti({
-          particleCount: 5,
-          angle: 120,
-          spread: 55,
-          origin: { x: 1 }
-        });
-
-        if (Date.now() < end) {
-          requestAnimationFrame(frame);
-        }
-      })();
-    }
-
-    function launchFireworks() {
-      for (let i = 0; i < 10; i++) {
-        setTimeout(() => {
-          const fw = document.createElement("div");
-          fw.classList.add("firework");
-          fw.style.left = Math.random() * 100 + "vw";
-          fw.style.top = Math.random() * 100 + "vh";
-          fw.style.background = ["red", "yellow", "blue", "green", "purple"][Math.floor(Math.random()*5)];
-          document.body.appendChild(fw);
-          setTimeout(() => fw.remove(), 1000);
-        }, i * 300);
-      }
+      // Auto move to Page9 after kisses
+      setTimeout(() => {
+        window.location.href = "Page9.html";
+      }, 6000);
     }
   </script>
 </body>
