--- a/page7.html
+++ b/page7.html
@@ -18,7 +18,7 @@
       display: block;
       margin: 0 auto;
       position: relative;
-      z-index: 0;
+      z-index: 0; /* stays in background */
     }
     .top-text {
       position: absolute;
@@ -66,7 +66,9 @@
     .emoji {
       position: absolute;
       font-size: 30px;
+      z-index: 5; /* ✅ ensure emojis above photo */
       animation: floatUp linear forwards;
+      pointer-events: none;
     }
     @keyframes floatUp {
       from { transform: translateY(100vh); opacity: 1; }
@@ -74,7 +76,14 @@
     }
 
     /* Fireworks + Confetti Canvas */
-    canvas { position:absolute; top:0; left:0; width:100%; height:100%; pointer-events:none; }
+    canvas { 
+      position:absolute; 
+      top:0; left:0; 
+      width:100%; 
+      height:100%; 
+      pointer-events:none; 
+      z-index:4; /* ✅ above photo but below emojis */
+    }
   </style>
 </head>
 <body>
