--- a/page7.html
+++ b/page7.html
@@ -28,7 +28,8 @@
       z-index: 3;
     }
     .quiz-box {
-      margin-top: 20px;
+      position: relative;
+      margin-top: -40px; /* 👈 lifted up */
       z-index: 3;
       color: yellow;
       font-weight: bold;
