--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     function checkPassword() {
       let entered = document.getElementById("password").value;
-      let correctPassword = "mySecret123"; // 🔑 Change this to your personal password
+      let correctPassword = "Hate uuu😚"; // 🔑 Change this to your personal password
 
       if (entered === correctPassword) {
         window.location.href = "home.html"; // 👉 Change this to your surprise page (ex: page1.html)
