--- a/index.html
+++ b/index.html
@@ -1,95 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>404 Not Found</title>
   <style>
-    body {
-      background: #111;
-      color: #bbb;
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
+    :root { --bg:#0f0f10; --muted:#bdbdbd; --err:#ff5a5a; --box-bg:rgba(0,0,0,0.65); }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0}
+    body{
+      background:linear-gradient(180deg,#0b0b0c 0%, #121214 100%);
+      color:var(--muted);
+      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      text-align:center;
+      -webkit-tap-highlight-color: transparent;
+      user-select:none;
     }
-    h1 {
-      font-size: 80px;
-      margin: 0;
-      color: #ff4444;
+
+    .wrap{width:100%;max-width:820px;padding:32px}
+    h1{font-size:96px;line-height:1;margin:0;color:var(--err);letter-spacing:4px}
+    p{margin:12px 0 0;font-size:18px;color:var(--muted)}
+    .hint{margin-top:18px;font-size:13px;color:#8f8f8f}
+
+    /* hidden password panel */
+    #pwPanel{
+      display:none;
+      margin-top:22px;
+      background:var(--box-bg);
+      padding:16px;
+      border-radius:12px;
+      backdrop-filter: blur(4px);
+      display:flex;
+      justify-content:center;
+      gap:8px;
+      align-items:center;
+      flex-wrap:wrap;
     }
-    p {
-      font-size: 20px;
+    input[type="password"]{
+      padding:10px 12px;
+      font-size:16px;
+      border-radius:8px;
+      border:1px solid rgba(255,255,255,0.06);
+      background:rgba(255,255,255,0.02);
+      color:white;
+      outline:none;
+      min-width:180px;
     }
-    #passwordBox {
-      display: none;
-      margin-top: 20px;
+    button{
+      padding:10px 14px;
+      border-radius:8px;
+      border:none;
+      background:#2d8cff;
+      color:white;
+      font-weight:600;
+      cursor:pointer;
     }
-    input {
-      padding: 10px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    button {
-      padding: 10px 20px;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      background: #ff4081;
-      color: white;
-      cursor: pointer;
-      margin-left: 10px;
-    }
-    button:hover {
-      background: #e73370;
-    }
+    .small{font-size:13px;color:#999;margin-top:10px}
   </style>
 </head>
 <body>
-  <!-- Fake Error Page -->
-  <div id="errorPage">
+  <div class="wrap" id="wrap">
     <h1>404</h1>
-    <p>Oops! The page you are looking for does not exist.</p>
-  </div>
+    <p>Oops — the page you are looking for can’t be found.</p>
+    <div class="hint">Tap the screen multiple times to continue.</div>
 
-  <!-- Hidden Password Box -->
-  <div id="passwordBox">
-    <input type="password" id="password" placeholder="Enter Password">
-    <button onclick="checkPassword()">Enter</button>
+    <div id="pwPanel" aria-hidden="true">
+      <input id="pw" type="password" placeholder="Enter password" autocomplete="off" />
+      <button id="enterBtn">Enter</button>
+    </div>
+
+    <div class="small" id="status" aria-hidden="true"></div>
   </div>
 
   <script>
-    let tapCount = 0;
-    let tapTimeout;
+    (function(){
+      // Configuration
+      const REQUIRED_TAPS = 10;               // number of taps required
+      const TAP_RESET_MS = 2000;             // reset tap count after this ms of inactivity
+      const CORRECT_PASSWORD = "8248845258"; // <-- your password
+      const SUCCESS_LOCATION = "home.html";  // page to open on success
 
-    document.body.addEventListener("click", function () {
-      tapCount++;
-      clearTimeout(tapTimeout);
+      // State
+      let tapCount = 0;
+      let tapTimer = null;
+      const pwPanel = document.getElementById('pwPanel');
+      const status = document.getElementById('status');
 
-      if (tapCount === 3) {
-        document.getElementById("passwordBox").style.display = "block";
+      function showPanel(){
+        pwPanel.style.display = 'flex';
+        pwPanel.setAttribute('aria-hidden', 'false');
+        document.getElementById('pw').focus();
+        status.textContent = '';
       }
 
-      tapTimeout = setTimeout(() => {
-        tapCount = 0; // reset if taps are slow
-      }, 1000);
-    });
-
-    function checkPassword() {
-      let entered = document.getElementById("password").value;
-      let correctPassword = "Hateuuu524"; // 🔑 Change this to your personal password
-
-      if (entered === correctPassword) {
-        window.location.href = "home.html"; // 👉 Change this to your surprise page (ex: page1.html)
-      } else {
-        alert("Wrong Password! Try again.");
+      function resetTaps(){
+        tapCount = 0;
+        clearTimeout(tapTimer);
+        tapTimer = null;
       }
-    }
+
+      function handleTap(e){
+        if (e.target && (e.target.tagName === 'INPUT' || e.target.tagName === 'BUTTON')) return;
+        tapCount++;
+        clearTimeout(tapTimer);
+        tapTimer = setTimeout(resetTaps, TAP_RESET_MS);
+
+        if (tapCount >= REQUIRED_TAPS){
+          resetTaps();
+          showPanel();
+        }
+      }
+
+      document.addEventListener('click', handleTap, {passive:true});
+      document.addEventListener('touchstart', handleTap, {passive:true});
+
+      const enterBtn = document.getElementById('enterBtn');
+      enterBtn.addEventListener('click', checkPassword);
+      document.getElementById('pw').addEventListener('keydown', function(ev){
+        if (ev.key === 'Enter') checkPassword();
+      });
+
+      function checkPassword(){
+        const val = document.getElementById('pw').value || '';
+        if (val === CORRECT_PASSWORD){
+          window.location.href = SUCCESS_LOCATION;
+        } else {
+          status.textContent = 'Wrong password';
+          setTimeout(()=> {
+            status.textContent = '';
+            document.getElementById('pw').value = '';
+            document.getElementById('pw').focus();
+          }, 900);
+        }
+      }
+    })();
   </script>
 </body>
 </html>
