--- a/index.html
+++ b/index.html
@@ -1,142 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
   <title>404 Not Found</title>
   <style>
-    :root { --bg:#0f0f10; --muted:#bdbdbd; --err:#ff5a5a; --box-bg:rgba(0,0,0,0.65); }
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0}
-    body{
-      background:linear-gradient(180deg,#0b0b0c 0%, #121214 100%);
-      color:var(--muted);
-      font-family:system-ui,-apple-system,"Segoe UI",Roboto,Arial;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      text-align:center;
-      -webkit-tap-highlight-color: transparent;
-      user-select:none;
+    body {
+      background: #fff;
+      color: #000;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 20%;
+      margin: 0;
     }
-
-    .wrap{width:100%;max-width:820px;padding:32px}
-    h1{font-size:96px;line-height:1;margin:0;color:var(--err);letter-spacing:4px}
-    p{margin:12px 0 0;font-size:18px;color:var(--muted)}
-    .hint{margin-top:18px;font-size:13px;color:#8f8f8f}
-
-    /* hidden password panel */
-    #pwPanel{
-      display:none;
-      margin-top:22px;
-      background:var(--box-bg);
-      padding:16px;
-      border-radius:12px;
-      backdrop-filter: blur(4px);
-      display:flex;
-      justify-content:center;
-      gap:8px;
-      align-items:center;
-      flex-wrap:wrap;
+    h1 {
+      font-size: 60px;
+      margin: 0;
     }
-    input[type="password"]{
-      padding:10px 12px;
-      font-size:16px;
-      border-radius:8px;
-      border:1px solid rgba(255,255,255,0.06);
-      background:rgba(255,255,255,0.02);
-      color:white;
-      outline:none;
-      min-width:180px;
+    p {
+      font-size: 20px;
+      color: #666;
     }
-    button{
-      padding:10px 14px;
-      border-radius:8px;
-      border:none;
-      background:#2d8cff;
-      color:white;
-      font-weight:600;
-      cursor:pointer;
+    /* Password box (hidden at first) */
+    #pwPanel {
+      display: none;  /* ✅ hidden until 10 taps */
+      margin-top: 20px;
     }
-    .small{font-size:13px;color:#999;margin-top:10px}
+    input[type="password"] {
+      padding: 10px;
+      font-size: 16px;
+      width: 200px;
+    }
+    button {
+      padding: 10px 15px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    /* Invisible tap overlay */
+    #tapArea {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 999;
+      background: transparent; /* invisible */
+    }
   </style>
 </head>
 <body>
-  <div class="wrap" id="wrap">
-    <h1>404</h1>
-    <p>Oops — the page you are looking for can’t be found.</p>
-    <div class="hint">Tap the screen multiple times to continue.</div>
 
-    <div id="pwPanel" aria-hidden="true">
-      <input id="pw" type="password" placeholder="Enter password" autocomplete="off" />
-      <button id="enterBtn">Enter</button>
-    </div>
+  <!-- Fake 404 error -->
+  <h1>404</h1>
+  <p>Page Not Found</p>
 
-    <div class="small" id="status" aria-hidden="true"></div>
+  <!-- Hidden password box -->
+  <div id="pwPanel">
+    <input type="password" id="pwInput" placeholder="Enter Password">
+    <button onclick="checkPassword()">Submit</button>
+    <p id="errorMsg" style="color:red; display:none;">Wrong password</p>
   </div>
 
+  <!-- Invisible tap area -->
+  <div id="tapArea"></div>
+
   <script>
-    (function(){
-      // Configuration
-      const REQUIRED_TAPS = 10;               // number of taps required
-      const TAP_RESET_MS = 2000;             // reset tap count after this ms of inactivity
-      const CORRECT_PASSWORD = "8248845258"; // <-- your password
-      const SUCCESS_LOCATION = "home.html";  // page to open on success
+    let tapCount = 0;
+    const REQUIRED_TAPS = 10; // ✅ 10 taps required
+    const PASSWORD = "8248845258";
 
-      // State
-      let tapCount = 0;
-      let tapTimer = null;
-      const pwPanel = document.getElementById('pwPanel');
-      const status = document.getElementById('status');
+    const tapArea = document.getElementById("tapArea");
 
-      function showPanel(){
-        pwPanel.style.display = 'flex';
-        pwPanel.setAttribute('aria-hidden', 'false');
-        document.getElementById('pw').focus();
-        status.textContent = '';
-      }
-
-      function resetTaps(){
+    tapArea.addEventListener("click", () => {
+      tapCount++;
+      if (tapCount >= REQUIRED_TAPS) {
         tapCount = 0;
-        clearTimeout(tapTimer);
-        tapTimer = null;
+        document.getElementById("pwPanel").style.display = "block";
+        tapArea.style.display = "none"; // remove tap area after showing password box
       }
+    });
 
-      function handleTap(e){
-        if (e.target && (e.target.tagName === 'INPUT' || e.target.tagName === 'BUTTON')) return;
-        tapCount++;
-        clearTimeout(tapTimer);
-        tapTimer = setTimeout(resetTaps, TAP_RESET_MS);
-
-        if (tapCount >= REQUIRED_TAPS){
-          resetTaps();
-          showPanel();
-        }
+    function checkPassword() {
+      const entered = document.getElementById("pwInput").value;
+      if (entered === PASSWORD) {
+        window.location.href = "home.html"; // redirect to surprise page
+      } else {
+        document.getElementById("errorMsg").style.display = "block";
       }
-
-      document.addEventListener('click', handleTap, {passive:true});
-      document.addEventListener('touchstart', handleTap, {passive:true});
-
-      const enterBtn = document.getElementById('enterBtn');
-      enterBtn.addEventListener('click', checkPassword);
-      document.getElementById('pw').addEventListener('keydown', function(ev){
-        if (ev.key === 'Enter') checkPassword();
-      });
-
-      function checkPassword(){
-        const val = document.getElementById('pw').value || '';
-        if (val === CORRECT_PASSWORD){
-          window.location.href = SUCCESS_LOCATION;
-        } else {
-          status.textContent = 'Wrong password';
-          setTimeout(()=> {
-            status.textContent = '';
-            document.getElementById('pw').value = '';
-            document.getElementById('pw').focus();
-          }, 900);
-        }
-      }
-    })();
+    }
   </script>
+
 </body>
 </html>
