--- a/Page8.html
+++ b/Page8.html
@@ -1,4 +1,4 @@
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8">
@@ -149,7 +149,7 @@
 
   <!-- Quiz -->
   <div class="quiz-box" id="quiz">
-    <p>😁 Annu Siri appo tha next page ku pogum... <br> More than 10 times 😁 type pannu... 🙈🤗😚🫶❤️‍🩹</p>
+    <p>😁 Annu Siri appo tha next page ku pogum... <br> More than 10 times 😁 type pannu... </p>
     <input type="text" id="answer" placeholder="Type here...">
     <button onclick="checkAnswer()">Submit</button>
   </div>
