--- a/page11.html
+++ b/page11.html
@@ -13,6 +13,28 @@
     font-family: Arial, sans-serif;
     overflow: hidden;
   }
+  .quiz-box {
+      display: none;
+      margin-top: 30px;
+    }
+    .quiz-box input {
+      font-size: 20px;
+      padding: 8px;
+      border-radius: 8px;
+      border: none;
+      outline: none;
+      text-align: center;
+    }
+    .quiz-box button {
+      font-size: 20px;
+      padding: 8px 16px;
+      margin-left: 10px;
+      border: none;
+      border-radius: 8px;
+      background: limegreen;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
   h1 {
     margin-top: 15px;
     font-size: 22px;
