--- a/page11.html
+++ b/page11.html
@@ -92,7 +92,7 @@
 <body>
 
 <h1>En Panda 🐼 Hug Time 💙🤗</h1>
-<p style="color:yellow;">Un Frnd ku tight hug kudu Panda 😘🤗… Vaa 10 hug kudu 🫂</p>
+<p style="color:yellow;">Un Frnd ku hug kudu Panda 😘🤗… Vaa 10 hug kudu 🫂</p>
 
 <div id="hugArea">
   <img src="her.png" id="her" class="person">
@@ -128,7 +128,7 @@ hugBtn.addEventListener("click", () => {
 
     // Floating emojis
     for (let i = 0; i < 8; i++) {
-      createEmoji(["❤️","💙","💜","💖","😘","🤗"][Math.floor(Math.random()*6)]);
+      createEmoji(["❤️","💙","💜","💖","🤗"][Math.floor(Math.random()*6)]);
     }
   }, 1500);
 
